# es-license-report

./: Cargo.toml  README.md  cluster.yml  clusters.yml
.github/workflows/: release.yml
openspec/changes/archive/2026-03-13-es-license-consumption-cli/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-13-es-license-consumption-cli/specs/cluster-config/: spec.md
openspec/changes/archive/2026-03-13-es-license-consumption-cli/specs/es-api-client/: spec.md
openspec/changes/archive/2026-03-13-es-license-consumption-cli/specs/license-calculation/: spec.md
openspec/changes/archive/2026-03-13-es-license-consumption-cli/specs/report-output/: spec.md
openspec/changes/archive/2026-04-01-enrich-report-consumed-and-update/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-01-enrich-report-consumed-and-update/specs/license-calculation/: spec.md
openspec/changes/archive/2026-04-01-smart-default-args/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-02-add-short-cli-options/: design.md  proposal.md  tasks.md
openspec/changes/sanitize-cluster-url-input/: design.md  proposal.md  tasks.md
openspec/changes/sanitize-cluster-url-input/specs/cluster-config/: spec.md
openspec/specs/cli-args/: spec.md
openspec/specs/cluster-config/: spec.md
openspec/specs/es-api-client/: spec.md
openspec/specs/license-calculation/: spec.md
openspec/specs/report-output/: spec.md
openspec/specs/report-update-mode/: spec.md
src/: calculation.rs  client.rs  config.rs  main.rs  report.rs
(+5 files in other folders)
